feat: added corr matrix for each city :)

--- a/apartments.ipynb
+++ b/apartments.ipynb
@@ -1,92 +1,9 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "id": "a35eeb9f-df70-4ab1-a243-2d2025888eb0",
-      "metadata": {},
-      "source": [
-        "# Preparing the data\n",
-        "Combining data into two datasets, one that contains all rent prices and one that contains all buy prices."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "fe55883a-6887-43dd-9498-5333a51799e2",
-      "metadata": {
-        "scrolled": true,
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "import glob\n",
-        "import os\n",
-        "buy_files = glob.glob(os.path.join('./dataset/', 'apartments_pl*'))\n",
-        "rent_files = glob.glob(os.path.join('./dataset/', 'apartments_rent*'))\n",
-        "\n",
-        "buy_df = pd.DataFrame()\n",
-        "rent_df = pd.DataFrame()\n",
-        "\n",
-        "for file in buy_files:\n",
-        "    df = pd.read_csv(file)\n",
-        "    base = os.path.basename(file)\n",
-        "    date = base[-11:-4] # 2024_02 transform later if needed\n",
-        "    df['date']=date\n",
-        "    buy_df = pd.concat([buy_df, df])\n",
-        "\n",
-        "for file in rent_files:\n",
-        "    df = pd.read_csv(file)\n",
-        "    base = os.path.basename(file)\n",
-        "    date = base[-11:-4] # 2024_02 transform later if needed\n",
-        "    df['date']=date\n",
-        "    rent_df = pd.concat([rent_df, df])\n",
-        "\n",
-        "buy_df.to_csv('buy.csv', index=False)\n",
-        "rent_df.to_csv('rent.csv', index=False)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "7c6681b9",
-      "metadata": {},
-      "source": [
-        "# Experiment 0 - checking how points of interest affect prices"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "57a1e5ea",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "buy_df = pd.read_csv('buy.csv')\n",
-        "rent_df = pd.read_csv('rent.csv')\n",
-        "\n",
-        "tested_features = ['poiCount','schoolDistance','clinicDistance','postOfficeDistance','kindergartenDistance','restaurantDistance','collegeDistance','pharmacyDistance', 'price']\n",
-        "\n",
-        "correlation_buy = buy_df[tested_features].corr()\n",
-        "correlation_rent = rent_df[tested_features].corr()\n",
-        "\n",
-        "print('Correlation matrix for buy \\n',correlation_buy['price'],sep='')\n",
-        "print('Correlation matrix for rent \\n',correlation_rent['price'],sep='')\n",
-        "\n",
-        "wroclaw_buy_df = buy_df[buy_df['city']=='wroclaw']\n",
-        "wroclaw_rent_df = rent_df[rent_df['city']=='wroclaw']\n",
-        "correlation_buy = wroclaw_buy_df[tested_features].corr()\n",
-        "correlation_rent = wroclaw_rent_df[tested_features].corr()\n",
-        "\n",
-        "print('Correlation matrix for buy in wroclaw \\n',correlation_buy['price'], sep='')\n",
-        "print('Correlation matrix for rent in wroclaw \\n',correlation_rent['price'],sep='')"
-      ]
-    }
-  ],
   "metadata": {
     "kernelspec": {
+      "name": "python",
       "display_name": "Python (Pyodide)",
-      "language": "python",
-      "name": "python"
+      "language": "python"
     },
     "language_info": {
       "codemirror_mode": {
@@ -101,6 +18,41 @@
       "version": "3.8"
     }
   },
+  "nbformat_minor": 5,
   "nbformat": 4,
-  "nbformat_minor": 5
+  "cells": [
+    {
+      "id": "a35eeb9f-df70-4ab1-a243-2d2025888eb0",
+      "cell_type": "markdown",
+      "source": "# Preparing the data\nCombining data into two datasets, one that contains all rent prices and one that contains all buy prices.",
+      "metadata": {}
+    },
+    {
+      "id": "fe55883a-6887-43dd-9498-5333a51799e2",
+      "cell_type": "code",
+      "source": "import pandas as pd\nimport glob\nimport os\nbuy_files = glob.glob(os.path.join('./dataset/', 'apartments_pl*'))\nrent_files = glob.glob(os.path.join('./dataset/', 'apartments_rent*'))\n\nbuy_df = pd.DataFrame()\nrent_df = pd.DataFrame()\n\nfor file in buy_files:\n    df = pd.read_csv(file)\n    base = os.path.basename(file)\n    date = base[-11:-4] # 2024_02 transform later if needed\n    df['date']=date\n    buy_df = pd.concat([buy_df, df])\n\nfor file in rent_files:\n    df = pd.read_csv(file)\n    base = os.path.basename(file)\n    date = base[-11:-4] # 2024_02 transform later if needed\n    df['date']=date\n    rent_df = pd.concat([rent_df, df])\n\nbuy_df.to_csv('buy.csv', index=False)\nrent_df.to_csv('rent.csv', index=False)\n",
+      "metadata": {
+        "trusted": true,
+        "scrolled": true
+      },
+      "outputs": [],
+      "execution_count": 1
+    },
+    {
+      "id": "9393d0b8-c6ae-4725-8258-550c76f27f21",
+      "cell_type": "code",
+      "source": "buy_df = pd.read_csv('buy.csv')\nrent_df = pd.read_csv('rent.csv')\n\ntested_features = ['poiCount','schoolDistance','clinicDistance','postOfficeDistance','kindergartenDistance','restaurantDistance','collegeDistance','pharmacyDistance', 'price']\n\ncorrelation_buy = buy_df[tested_features].corr()\ncorrelation_rent = rent_df[tested_features].corr()\n\nprint('Correlation matrix for buy \\n',correlation_buy['price'],sep='')\nprint('Correlation matrix for rent \\n',correlation_rent['price'],sep='')\n\nfor city in buy_df['city'].unique():\n    correlation_buy = buy_df[buy_df['city']==city][tested_features].corr()\n    print(f'Correlation matrix for buy in {city} \\n',correlation_buy['price'], sep='')\n\nfor city in rent_df['city'].unique():\n    correlation_rent = rent_df[rent_df['city']==city][tested_features].corr()\n    print(f'Correlation matrix for rent in {city} \\n',correlation_rent['price'], sep='')\n    ",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "Correlation matrix for buy \npoiCount                0.184639\nschoolDistance         -0.000032\nclinicDistance         -0.107165\npostOfficeDistance     -0.011941\nkindergartenDistance   -0.016408\nrestaurantDistance     -0.105686\ncollegeDistance        -0.014567\npharmacyDistance       -0.013712\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent \npoiCount                0.180689\nschoolDistance         -0.070784\nclinicDistance         -0.146804\npostOfficeDistance     -0.057638\nkindergartenDistance   -0.065827\nrestaurantDistance     -0.155015\ncollegeDistance        -0.086960\npharmacyDistance       -0.069603\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in szczecin \npoiCount               -0.005292\nschoolDistance          0.088632\nclinicDistance          0.050508\npostOfficeDistance      0.024738\nkindergartenDistance    0.011931\nrestaurantDistance     -0.015733\ncollegeDistance         0.057295\npharmacyDistance        0.019113\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in gdynia \npoiCount                0.182241\nschoolDistance         -0.122449\nclinicDistance         -0.131157\npostOfficeDistance     -0.122950\nkindergartenDistance   -0.123824\nrestaurantDistance     -0.172143\ncollegeDistance        -0.033586\npharmacyDistance       -0.128745\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in krakow \npoiCount                0.312039\nschoolDistance         -0.084636\nclinicDistance         -0.179950\npostOfficeDistance      0.026271\nkindergartenDistance    0.106878\nrestaurantDistance     -0.130933\ncollegeDistance        -0.203747\npharmacyDistance       -0.013722\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in poznan \npoiCount                0.088849\nschoolDistance          0.070360\nclinicDistance         -0.003163\npostOfficeDistance      0.067286\nkindergartenDistance    0.126836\nrestaurantDistance     -0.050091\ncollegeDistance        -0.120832\npharmacyDistance        0.061613\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in bialystok \npoiCount                0.018799\nschoolDistance          0.147920\nclinicDistance          0.056629\npostOfficeDistance      0.109394\nkindergartenDistance    0.080347\nrestaurantDistance      0.011840\ncollegeDistance         0.030523\npharmacyDistance        0.069972\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in gdansk \npoiCount                0.202929\nschoolDistance         -0.144889\nclinicDistance         -0.276930\npostOfficeDistance     -0.020194\nkindergartenDistance   -0.039385\nrestaurantDistance     -0.231752\ncollegeDistance        -0.185928\npharmacyDistance       -0.083373\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in wroclaw \npoiCount                0.047221\nschoolDistance          0.019926\nclinicDistance         -0.049543\npostOfficeDistance      0.040544\nkindergartenDistance    0.009871\nrestaurantDistance     -0.043003\ncollegeDistance         0.037047\npharmacyDistance        0.012208\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in radom \npoiCount                0.049530\nschoolDistance          0.160398\nclinicDistance          0.239824\npostOfficeDistance      0.096351\nkindergartenDistance    0.161687\nrestaurantDistance      0.129076\ncollegeDistance         0.067875\npharmacyDistance        0.145255\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in rzeszow \npoiCount               -0.075767\nschoolDistance          0.145431\nclinicDistance          0.057962\npostOfficeDistance      0.151768\nkindergartenDistance    0.116020\nrestaurantDistance      0.061515\ncollegeDistance         0.081200\npharmacyDistance        0.101957\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in lodz \npoiCount                0.026682\nschoolDistance          0.180366\nclinicDistance         -0.098192\npostOfficeDistance      0.133218\nkindergartenDistance    0.149827\nrestaurantDistance      0.087324\ncollegeDistance         0.023851\npharmacyDistance        0.144169\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in katowice \npoiCount                0.135370\nschoolDistance          0.051443\nclinicDistance         -0.184230\npostOfficeDistance      0.042193\nkindergartenDistance    0.049873\nrestaurantDistance     -0.003655\ncollegeDistance        -0.163784\npharmacyDistance        0.025310\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in lublin \npoiCount                0.107517\nschoolDistance          0.102121\nclinicDistance          0.071288\npostOfficeDistance      0.171382\nkindergartenDistance    0.024587\nrestaurantDistance     -0.031299\ncollegeDistance         0.102477\npharmacyDistance        0.084710\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in czestochowa \npoiCount               -0.068869\nschoolDistance          0.426299\nclinicDistance          0.340398\npostOfficeDistance      0.201176\nkindergartenDistance    0.050103\nrestaurantDistance     -0.029490\ncollegeDistance         0.213124\npharmacyDistance        0.244955\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in warszawa \npoiCount                0.176176\nschoolDistance          0.001620\nclinicDistance         -0.119642\npostOfficeDistance     -0.046345\nkindergartenDistance    0.008988\nrestaurantDistance     -0.138753\ncollegeDistance        -0.101749\npharmacyDistance       -0.042819\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for buy in bydgoszcz \npoiCount               -0.055565\nschoolDistance          0.025102\nclinicDistance         -0.039221\npostOfficeDistance     -0.003333\nkindergartenDistance    0.109587\nrestaurantDistance      0.125832\ncollegeDistance         0.055276\npharmacyDistance        0.027345\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in szczecin \npoiCount                0.083274\nschoolDistance          0.035821\nclinicDistance          0.051859\npostOfficeDistance      0.077206\nkindergartenDistance   -0.001261\nrestaurantDistance     -0.032520\ncollegeDistance        -0.025882\npharmacyDistance        0.153002\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in gdynia \npoiCount                0.153408\nschoolDistance         -0.133727\nclinicDistance         -0.118803\npostOfficeDistance     -0.113547\nkindergartenDistance   -0.098225\nrestaurantDistance     -0.129942\ncollegeDistance        -0.112323\npharmacyDistance       -0.105942\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in krakow \npoiCount                0.194698\nschoolDistance         -0.073898\nclinicDistance         -0.115004\npostOfficeDistance      0.020509\nkindergartenDistance    0.133254\nrestaurantDistance     -0.095631\ncollegeDistance        -0.191607\npharmacyDistance        0.016408\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in poznan \npoiCount                0.140317\nschoolDistance          0.009558\nclinicDistance         -0.030046\npostOfficeDistance      0.052212\nkindergartenDistance    0.009081\nrestaurantDistance     -0.071333\ncollegeDistance        -0.178016\npharmacyDistance       -0.003116\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in bialystok \npoiCount                0.018709\nschoolDistance          0.065246\nclinicDistance          0.027353\npostOfficeDistance      0.049061\nkindergartenDistance    0.105970\nrestaurantDistance     -0.076367\ncollegeDistance         0.022685\npharmacyDistance       -0.017875\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in gdansk \npoiCount                0.224097\nschoolDistance         -0.125107\nclinicDistance         -0.212990\npostOfficeDistance     -0.027486\nkindergartenDistance    0.014883\nrestaurantDistance     -0.191652\ncollegeDistance        -0.245072\npharmacyDistance       -0.020525\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in wroclaw \npoiCount                0.117857\nschoolDistance         -0.018577\nclinicDistance         -0.110852\npostOfficeDistance     -0.032911\nkindergartenDistance   -0.006205\nrestaurantDistance     -0.101875\ncollegeDistance        -0.052846\npharmacyDistance       -0.019722\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in radom \npoiCount                0.182228\nschoolDistance         -0.132389\nclinicDistance         -0.037240\npostOfficeDistance     -0.071900\nkindergartenDistance    0.026220\nrestaurantDistance     -0.036925\ncollegeDistance        -0.146372\npharmacyDistance       -0.046013\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in rzeszow \npoiCount                0.101964\nschoolDistance          0.073409\nclinicDistance          0.052771\npostOfficeDistance      0.179106\nkindergartenDistance    0.078475\nrestaurantDistance      0.003570\ncollegeDistance         0.048443\npharmacyDistance        0.037357\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in lodz \npoiCount               -0.009437\nschoolDistance          0.144967\nclinicDistance         -0.057449\npostOfficeDistance      0.115682\nkindergartenDistance    0.160349\nrestaurantDistance      0.002929\ncollegeDistance        -0.015003\npharmacyDistance        0.147659\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in katowice \npoiCount               -0.027708\nschoolDistance          0.058330\nclinicDistance         -0.149740\npostOfficeDistance      0.057354\nkindergartenDistance    0.012456\nrestaurantDistance     -0.008206\ncollegeDistance        -0.000488\npharmacyDistance        0.015566\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in lublin \npoiCount                0.251300\nschoolDistance         -0.101858\nclinicDistance         -0.247839\npostOfficeDistance      0.059775\nkindergartenDistance    0.166663\nrestaurantDistance     -0.129785\ncollegeDistance        -0.205223\npharmacyDistance        0.009575\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in czestochowa \npoiCount               -0.174500\nschoolDistance          0.447541\nclinicDistance          0.371902\npostOfficeDistance      0.189411\nkindergartenDistance   -0.010115\nrestaurantDistance      0.097576\ncollegeDistance        -0.037631\npharmacyDistance        0.270770\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in warszawa \npoiCount                0.151944\nschoolDistance         -0.038311\nclinicDistance         -0.092297\npostOfficeDistance     -0.029266\nkindergartenDistance    0.068884\nrestaurantDistance     -0.108359\ncollegeDistance        -0.112937\npharmacyDistance       -0.017058\nprice                   1.000000\nName: price, dtype: float64\nCorrelation matrix for rent in bydgoszcz \npoiCount               -0.049266\nschoolDistance          0.122741\nclinicDistance          0.058590\npostOfficeDistance      0.088111\nkindergartenDistance    0.146237\nrestaurantDistance      0.097822\ncollegeDistance         0.033701\npharmacyDistance        0.151374\nprice                   1.000000\nName: price, dtype: float64\n"
+        }
+      ],
+      "execution_count": 16
+    }
+  ]
 }
